# src/routes/userRoutes.ts
@@ -1,12 +1,12 @@
 import { Router } from "express";
 import { createCard } from "../controllers/createCardController.js";
 import { deleteCard } from "../controllers/deleteCardController.js";
-import { registerUser } from "../controllers/registrationController.js";
+import { getUserCards } from "../controllers/getCardsController.js";
 
 const router = Router();
 
-router.post("/register", registerUser);
 router.post("/users/:userId/create-card", createCard);
 router.delete("/users/:userId/delete-card/:cardId", deleteCard);
+router.get("/users/:userId/cards", getUserCards);
 
 export default router;
